# bridge-common

./: .gitignore  Cargo.toml  README.md  build.rs
common/primitive-types/: Cargo.toml
common/primitive-types/impls/codec/: Cargo.toml
common/primitive-types/impls/codec/src/: lib.rs
common/primitive-types/src/: lib.rs
common/ustd/: Cargo.toml
common/ustd/src/: lib.rs
light-btc/chain/: Cargo.toml
light-btc/chain/src/: block_header.rs  transaction.rs
light-btc/crypto/: Cargo.toml
light-btc/crypto/src/: lib.rs
light-btc/keys/: Cargo.toml
light-btc/keys/src/: address.rs  lib.rs  public.rs
light-btc/merkle/: Cargo.toml
light-btc/merkle/src/: lib.rs
light-btc/primitives/: Cargo.toml
light-btc/primitives/src/: bytes.rs  compact.rs  lib.rs
light-btc/script/: Cargo.toml
light-btc/script/src/: lib.rs
light-btc/serialization/: Cargo.toml
light-btc/serialization/src/: impls.rs  lib.rs
src/: lib.rs
