[package]
build = 'build.rs'
edition = '2018'
name = 'bridge-common'
version = '1.0.0'

[dependencies]
bit-vec = {path='./bit-vec'}
btc-base58= {path='./common/base58',package='base58'}
btc-primitive-types={path='./common/primitive-types',package='primitive-types'}
btc-ustd={path='./common/ustd',package='ustd'}
btc-chain={path='./light-btc/chain',package='chain'}
btc-crypto={path='./light-btc/crypto',package='crypto'}
btc-keys={path='./light-btc/keys',package='keys'}
btc-merkle={path='./light-btc/merkle',package='merkle'}
btc-primitives={path='./light-btc/primitives',package='primitives'}
btc-script={path='./light-btc/script',package='script'}
btc-serialization={path='./light-btc/serialization',package='serialization'}
btc-serialization-derive={path='./light-btc/serialization_derive',package='serialization_derive'}


[workspace]
members = [
    "bit-vec",
    "common/base58",
    "common/ustd",
    "common/primitive-types",
    "common/rlp",
    "bit-vec",
    "light-btc/chain",
    "light-btc/crypto",
    "light-btc/keys",
    "light-btc/merkle",
    "light-btc/primitives",
    "light-btc/script",
    "light-btc/serialization",

]


[build-dependencies]
vergen = '3'




[profile.release]
panic = 'unwind'

[features]
default = ["std"]
std = [
	'btc-ustd/std',
	'btc-base58/std',
	'btc-primitive-types/std',
	'btc-primitives/std',
	'btc-crypto/std',
	'btc-serialization/std',
	'btc-chain/std',
	'btc-keys/std',
	'btc-merkle/std',
	'btc-script/std',
	'bit-vec/std',
]