[package]
name = "chain"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com> and koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"

[dependencies]
ustd = { path = "../../common/ustd", default-features = false }
primitives = { path = "../primitives", default-features = false }
serialization = { path = "../serialization", default-features = false }
crypto = { path = "../crypto", default-features = false }

rustc-hex = { version = "2.0", default-features = false }

codec = { package = "parity-scale-codec", version = "1.0.5", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
default = ["std"]
std = [
    "ustd/std",
    "primitives/std",
    "serialization/std",
    "crypto/std",
    "rustc-hex/std",
    "codec/std",
    "serde",
    "serde_derive",
]
