[package]
name = "merkle"
version = "0.1.0"
authors = ["Chainpool <http://chainx.org>"]
edition = "2018"

[dependencies]
ustd = { path = "../../common/ustd", default-features = false }
primitives = { path = "../primitives", default-features = false }
serialization = { path = "../serialization", default-features = false }
chain = { path = "../chain", default-features = false }
bit-vec = { path = "../../bit-vec", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.5", default-features = false, features = ["derive"] }

[dev-dependencies]
crypto = { path = "../crypto", default-features = false }

[features]
default = ["std"]
std = [
     "ustd/std",
     "primitives/std",
     "serialization/std",
     "chain/std",
     "bit-vec/std",
     "codec/std",
]
