[package]
name = "primitives"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com> and koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"

[dependencies]
ustd = { path = "../../common/ustd", default-features = false }
primitive-types = { path = "../../common/primitive-types", default-features = false, features = ["codec"] }
#substrate-primitives = { package = "substrate-primitives",git = 'https://github.com/paritytech/substrate.git', rev = '4408fa7d17c4a25e859411dd1d046b86d5b0a339' , default-features = false }
substrate-primitives = { package = "substrate-primitives",git = 'https://github.com/paritytech/substrate.git', rev = 'e348b5b32896dd473e74f54fe0bf5d7fce8f8cfd' , default-features = false }
byteorder = { version = "1.3", default-features = false }
rustc-hex = { version = "2.0", default-features = false }

serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
default = ["std"]
std = [
    "ustd/std",
    "byteorder/std",
    "rustc-hex/std",
    "primitive-types/std",
    "primitive-types/serde",
    "substrate-primitives/std",
    "serde",
    "serde_derive",
]
