[package]
name = "primitives"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com> and koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"

[dependencies]
ustd = { path = "../../common/ustd", default-features = false }
primitive-types = { path = "../../common/primitive-types", default-features = false, features = ["codec"] }
substrate-primitives = { package = "substrate-primitives",git = 'https://github.com/paritytech/substrate.git', rev = 'bebe88a64c7199fcbcfdfae0ba6eb72e9e797b8d' , default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.5", default-features = false, features = ["derive"] }
byteorder = { version = "1.3", default-features = false }
rustc-hex = { version = "2.0", default-features = false }

serde = { version = "1.0.101", optional = true }
serde_derive = { version = "1.0.101", optional = true }

[features]
default = ["std"]
std = [
    "ustd/std",
    "byteorder/std",
    "rustc-hex/std",
    "primitive-types/std",
    "primitive-types/serde",
    "substrate-primitives/std",
    "serde",
    "serde_derive",
    "codec/std",
]
